<resources>
    <string name="app_name">saveAnimal</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">홈</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string-array name="region_list">
        <item>서울</item>
        <item>경기</item>
        <item>인천</item>
        <item>부산</item>
        <item>대구</item>
        <item>광주</item>
        <item>대전</item>
        <item>울산</item>
        <item>세종</item>
        <item>강원</item>
        <item>충북</item>
        <item>충남</item>
        <item>전북</item>
        <item>전남</item>
        <item>경북</item>
        <item>경남</item>
        <item>제주</item>
    </string-array>
    <string-array name="species">
        <item>말티즈</item>
        <item>포메라니안</item>
        <item>진돗개</item>
        <item>치와와</item>
        <item>웰시 코기</item>
        <item>사모예드</item>
        <item>비글</item>
        <item>보스턴 테리어</item>
        <item>닥스훈트</item>
        <item>비숑 프리제</item>
        <item>진돗개</item>
        <item>푸들</item>
        <item>보더 콜리</item>
        <item>시츄</item>
        <item>시바 이누</item>
    </string-array>
    <string-array name="personal">
        <item>활발</item>
        <item>내성적</item>
        <item>겁이 많음</item>
        <item>사나움</item>
        <item>경계가 심함</item>
        <item>온순함</item>
    </string-array>
    <string-array name="scared">
        <item>주사기</item>
        <item>손</item>
        <item>사람</item>
        <item>새</item>
        <item>소음</item>
        <item>동물</item>
    </string-array>
    <string-array name="disease">
        <item>슬개골탈골</item>
        <item>아토피</item>
        <item>피부병</item>
        <item>호흡기 질환</item>
        <item>알레르기</item>
        <item>심장 질환</item>
    </string-array>
    <string name="title_activity_login">로그인</string>
    <string name="register"> 회원가입 </string>
    <string name="role"> 역할을 선택해주세요. </string>
    <string name="animalShelter"> 보호소 </string>
    <string name="users"> 일반사용자 </string>
    <string name="next"> 다음 </string>
    <string name="id"> 아이디 </string>
    <string name="password"> 비밀번호 </string>
    <string name="login"> 로그인 </string>
    <string name="notregister"> 회원이 아니신가요? 회원가입으로 이동하기</string>
    <string name="profile"> 프로필 </string>
</resources>